# CHK_SRC

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: chakra.example.yaml
docs/: HANDOFF.md  SECURITY.md  SELECTORS.md
src/chakra_scraper/: __init__.py  browser.py  cli.py  errors.py  extractor.py  logging_config.py  models.py  settings.py  writer.py
tests/: test_models.py  test_settings.py  test_writer.py
